Change .collect(Collectors.toList()) to toList() available from Java 16 - see InMemoryTaskManager.getEpicSubtasks()